2014-12-26  Eli Zaretskii  <eliz@gnu.org>

	* info/info-utils.c (fncmp) [__MSDOS__ || __MINGW32__]: Now
	external.  Move the #define for Posix hosts ...

	* info/info-utils.h (fncmp): ...to here.  Declare a prototype for
	__MSDOS__ and __MINGW32__.

	* info/infopath.c (infopath_add_dir): If the inode values are
	zero, use file-name comparison as fallback.

2014-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (find_node_separator, skip_node_separator): 
	Allow optional '\r' before '\n' after Ctrl-_ node separator.

	* info/info-utils.c (parse_top_node_line),
	* info/nodes.c (get_nodes_of_info_file),
	* info/search.c (find_node_in_binding): Include '\r' in list of 
	terminating characters.

2013-12-25  Eli Zaretskii  <eliz@gnu.org>

	* info/man.c (get_manpage_from_formatter) <!PIPE_USE_FORK>: 
	Check for end of array without using removed variable.

2013-12-25  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (gettextinfo): Pass expected arguments to 
	info_error.

2013-12-25  Eli Zaretskii  <eliz@gnu.org>

	* info/terminal.c (terminal_initialize_terminal) 
	<terminal_initialize_terminal_hook>: Call initialize_byte_map.

2014-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_window_1): Don't display a line 
	continuation character on the last line of the display.  Check 
	was formerly done in process_node_text.  Report from Eli 
	Zaretskii.

2014-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm: Set CSS styles for @indentedblock, 
	@smallindentedblock with "blockquote" instead of "div".

	(%indented_block_commmands, %indented_preformatted_commands): 
	Renamed.

	(_convert_preformatted_or_indented_commands)
	(_convert_preformatted_command): Renamed.  Don't use this 
	function for @indentedblock and @smallindentedblock.

	(_convert_indented_command): New function.  Use "blockquote" tag 
	to indent @indentedblock and @smallindentedblock.

2014-12-18  Karl Berry  <karl@gnu.org>
